arquivos html e css do Text Analyzer

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,50 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Analizador de texto</title>
+  <title>Analisador de texto</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+
+  <br>
+
+    <header>
+      <br>
+    <h1>ANALISADOR DE TEXTO</h1>
+    </header>
+
+    
+    <ul class="format">
+      <center>
+      <li class="counter" data-testid="word-count">Contagem de palavras:</li>
+      <li class="counter" data-testid="character-count">Contagem de caracteres:</li>
+      <li class="counter" data-testid="character-no-spaces-count">Contagem de caracteres excluindo espaços e sinais de pontuação:</li>
+      <li class="counter" data-testid="number-count">Contagem de números:</li>
+      <li class="counter" data-testid="number-sum">Soma total de números:</li>
+      <li class="counter" data-testid="word-length-average">Comprimento médio das palavras:</li>
+    </center>
+    </ul>
+  
+  
+  <br>
+
+    <div class="format">
+    <label for="Caixa de texto">Digite ou cole o seu texto aqui:</label>
+
+  <br>
+  <center><textarea name="user-input" rows="5" cols="197"></textarea></center>
+  <center><button id="reset-button">LIMPAR TEXTO</button></center>
+    </div>
+
+  <br>
+
+    <footer>
+      <p>CAMILA DE OLIVEIRA BATISTA DE LARA</p>
+    </footer>
+
+
+
   <script src="index.js" type="module"></script>
 </body>
 </html>
