--- a/src/index.html
+++ b/src/index.html
@@ -17,25 +17,23 @@
     </header>
 
     
-    <ul class="format">
-      <center>
+    <center><ul class="format">
+      
       <li class="counter" data-testid="word-count">Contagem de palavras:</li>
       <li class="counter" data-testid="character-count">Contagem de caracteres:</li>
       <li class="counter" data-testid="character-no-spaces-count">Contagem de caracteres excluindo espaços e sinais de pontuação:</li>
       <li class="counter" data-testid="number-count">Contagem de números:</li>
       <li class="counter" data-testid="number-sum">Soma total de números:</li>
       <li class="counter" data-testid="word-length-average">Comprimento médio das palavras:</li>
-    </center>
-    </ul>
-  
-  
+    </ul></center>
+
   <br>
 
     <div class="format">
     <label for="Caixa de texto">Digite ou cole o seu texto aqui:</label>
 
   <br>
-  <center><textarea name="user-input" rows="5" cols="197"></textarea></center>
+  <center><textarea name="user-input" rows="5" cols="190"></textarea></center>
   <center><button id="reset-button">LIMPAR TEXTO</button></center>
     </div>
 
