--- a/index.html
+++ b/index.html
@@ -11,40 +11,44 @@
 
   <br>
 
-    <header>
-      <br>
+  <header>
+    <br>
     <h1>ANALISADOR DE TEXTO</h1>
-    </header>
+  </header>
 
-    
-    <center><ul class="format">
-      
+
+  <center>
+    <ul class="format">
+
       <li class="counter" data-testid="word-count">Contagem de palavras:</li>
       <li class="counter" data-testid="character-count">Contagem de caracteres:</li>
-      <li class="counter" data-testid="character-no-spaces-count">Contagem de caracteres excluindo espaços e sinais de pontuação:</li>
+      <li class="counter" data-testid="character-no-spaces-count">Contagem de caracteres excluindo espaços e sinais de
+        pontuação:</li>
       <li class="counter" data-testid="number-count">Contagem de números:</li>
       <li class="counter" data-testid="number-sum">Soma total de números:</li>
       <li class="counter" data-testid="word-length-average">Comprimento médio das palavras:</li>
-    </ul></center>
+    </ul>
+  </center>
 
   <br>
 
-    <div class="format">
+  <div class="format">
     <label for="Caixa de texto">Digite ou cole o seu texto aqui:</label>
 
-  <br>
-  <center><textarea name="user-input" rows="5" cols="165"></textarea></center>
-  <center><button id="reset-button">LIMPAR TEXTO</button></center>
-    </div>
+    <br>
+    <center><textarea name="user-input" rows="5" cols="165"></textarea></center>
+    <center><button id="reset-button">LIMPAR TEXTO</button></center>
+  </div>
 
   <br>
 
-    <footer>
-      <p>CAMILA DE OLIVEIRA BATISTA DE LARA</p>
-    </footer>
+  <footer>
+    <p>CAMILA DE OLIVEIRA BATISTA DE LARA</p>
+  </footer>
 
 
 
   <script src="index.js" type="module"></script>
 </body>
+
 </html>
